--- a/01-Android/app/src/main/res/values/strings.xml
+++ b/01-Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ccgr12024b_hdst</string>
+    <string name="saludo">Hello world!s</string>
+    <color name="saludo_color">#CD8915</color>
 </resources>
